# kuf_messdaten_excel_report

./: .gitignore  pyproject.toml  readme.md  requirements.txt  script.py
src/kuf_messdaten_excel_report/: __init__.py  database_connection.py  excel_helper.py  foo.py  html_tables.py  monatsbericht.py  png_charts.py  settings.py  utils.py  v1.py  wochenbericht.py
src/kuf_messdaten_excel_report.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/kuf_messdaten_excel_report/resources/: startup.bat
test/: test_module.py
tests/: test_module.py
